--- a/package.json
+++ b/package.json
@@ -4,29 +4,29 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run server\" \"vite\"",
-    "dev:full": "concurrently \"npm run server\" \"vite\"",
+    "dev": "vite",
+    "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
     "server": "node server/index.js",
     "build": "vite build",
-    "start": "NODE_ENV=production node server/index.js",
-    "preview:full": "npm run build && npm run start",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.6",
     "@fontsource/poppins": "^5.2.6",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.344.0",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
